✨ feat(sun_notifications): Use config_entry selector for Telegram bot integration

--- a/sun_notifications/sun_notifications.yaml
+++ b/sun_notifications/sun_notifications.yaml
@@ -1,7 +1,7 @@
-# Version: 1.0.0
+# Version: 1.1.0
 blueprint:
   name: "☀️ Sun Notifications"
-  description: "🌅 Get notified at sunrise and sunset. Version 1.0.0"
+  description: "🌅 Get notified at sunrise and sunset via Telegram. Version 1.1.0"
   domain: automation
   author: r3mcos3
   source_url: https://github.com/r3mcos3/blueprints/blob/main/sun_notifications/sun_notifications.yaml
@@ -13,10 +13,11 @@ blueprint:
     # NOTIFICATION SETTINGS
     # ══════════════════════════════════════════════════════════════════════════
     notification_target:
-      name: 📱 Notification Target
-      description: The target for notifications (e.g., a device or a group).
+      name: 📱 Telegram Bot
+      description: Select the Telegram Bot integration to use for notifications.
       selector:
-        target:
+        config_entry:
+          integration: telegram_bot
 
     # ══════════════════════════════════════════════════════════════════════════
     # SUNRISE SETTINGS
@@ -94,17 +95,19 @@ action:
           - condition: template
             value_template: "{{ trigger.id == 'sunrise_trigger' and sunrise_enabled_var }}"
         sequence:
-          - service: notify.notify
+          - service: telegram_bot.send_message
+            target:
+              config_entry_id: !input notification_target
             data:
               message: "{{ sunrise_message_var }}"
-            target: !input notification_target
       # Sunset Case
       - conditions:
           - condition: template
             value_template: "{{ trigger.id == 'sunset_trigger' and sunset_enabled_var }}"
         sequence:
-          - service: notify.notify
+          - service: telegram_bot.send_message
+            target:
+              config_entry_id: !input notification_target
             data:
               message: "{{ sunset_message_var }}"
-            target: !input notification_target
 mode: single
