--- a/ai_weather_report/ai_weather_report.yaml
+++ b/ai_weather_report/ai_weather_report.yaml
@@ -7,10 +7,10 @@ blueprint:
 
     Version: 1.0.2
   domain: automation
-  author: r3mco
+  author: r3mcos3
   homeassistant:
     min_version: 2025.12.0
-  source_url: https://github.com/r3mco/blueprints/blob/main/ai_weather_report/ai_weather_report.yaml
+  source_url: https://github.com/r3mcos3/blueprints/blob/main/ai_weather_report/ai_weather_report.yaml
 
   input:
     weather_entity:
