--- a/camera_motion_snapshot/camera_motion_snapshot.yaml
+++ b/camera_motion_snapshot/camera_motion_snapshot.yaml
@@ -9,8 +9,10 @@ blueprint:
     - 🤖 Supports multiple Telegram bots via Config Entry and Chat ID.
     - ✍️ Fully customizable message caption.
 
-    Version: 1.5.0 🏷️
+    Version: 1.6.0 🏷️
   domain: automation
+  author: r3mcos3
+  source_url: https://github.com/r3mcos3/blueprints/blob/main/camera_motion_snapshot/camera_motion_snapshot.yaml
   input:
     motion_sensor:
       name: 🏃‍♂️ Motion Sensor
