--- a/camera_motion_snapshot/camera_motion_snapshot.yaml
+++ b/camera_motion_snapshot/camera_motion_snapshot.yaml
@@ -8,8 +8,9 @@ blueprint:
     - 🏃‍♂️ Triggered by any motion sensor.
     - 🤖 Supports multiple Telegram bots via Config Entry and Chat ID.
     - ✍️ Fully customizable message caption.
+    - ⏱️ Adjustable timeout (cooldown) between snapshots.
 
-    Version: 1.6.0 🏷️
+    Version: 1.7.0 🏷️
   domain: automation
   author: r3mcos3
   source_url: https://github.com/r3mcos3/blueprints/blob/main/camera_motion_snapshot/camera_motion_snapshot.yaml
@@ -50,6 +51,16 @@ blueprint:
       default: "/config/www/snapshot_motion.jpg"
       selector:
         text: {}
+    timeout:
+      name: ⏱️ Timeout (Cooldown)
+      description: ⏳ The time to wait after a snapshot before allowing another one (in seconds).
+      default: 60
+      selector:
+        number:
+          min: 0
+          max: 3600
+          unit_of_measurement: seconds
+          mode: box
 
 variables:
   target_chat_id_var: !input target_chat_id
@@ -59,6 +70,8 @@ trigger:
     entity_id: !input motion_sensor
     from: "off"
     to: "on"
+
+mode: single
 
 action:
   - service: camera.snapshot
@@ -72,3 +85,4 @@ action:
       target: "{{ target_chat_id_var }}"
       file: !input snapshot_path
       caption: !input message_caption
+  - delay: !input timeout
