--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -27,8 +27,8 @@ jobs:
           echo "Scanning for blueprints..."
 
           # Start building the table
-          TABLE="| Blueprint | Description | Import |
-          |-----------|-------------|--------|"
+          echo "| Blueprint | Description | Import |" > /tmp/blueprint_table.md
+          echo "|-----------|-------------|--------|" >> /tmp/blueprint_table.md
 
           # Find all blueprint yaml files (excluding .github and .worktrees top level)
           # Use find command to get relative paths for yq and URL encoding
@@ -127,16 +127,17 @@ jobs:
               fi
             fi
 
-            # Final formatted description for README
-            formatted_description="$version - $short_desc"
+        # Final formatted description for README
+        formatted_description="$version - $short_desc"
 
-            # Add row to table
-            TABLE="$TABLE
-        | $emoji **[$display_name](${repo_path_for_url}) | $formatted_description | [![Import](https://my.home-assistant.io/badges/blueprint_import.svg)]($import_url) |"
+        # Generate import URL
+        import_url="https://my.home-assistant.io/redirect/blueprint/?blueprint_url=https://github.com/$GITHUB_REPOSITORY/blob/main/$repo_path_for_url"
+
+        # Add row to table
+        echo "| $emoji **[$display_name]($repo_path_for_url)** | $formatted_description | [![Import](https://my.home-assistant.io/badges/blueprint_import.svg)]($import_url) |" >> /tmp/blueprint_table.md
           done
 
-          # Save table to file
-          echo "$TABLE" > /tmp/blueprint_table.md
+          # Table generation complete
           cat /tmp/blueprint_table.md
 
       - name: Update README
