--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -18,194 +18,107 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v6
 
-      - name: Setup yq
-        uses: mikefarah/yq-action@master # This action installs yq
-
       - name: Generate blueprint table
         id: generate
         run: |
           echo "Scanning for blueprints..."
 
           # Start building the table
-          echo "| Blueprint | Description | Import |" > /tmp/blueprint_table.md
-          echo "|-----------|-------------|--------|" >> /tmp/blueprint_table.md
+          TABLE="| Blueprint | Description | Import |
+          |-----------|-------------|--------|"
 
-          # Find all blueprint yaml files (excluding .github and .worktrees top level)
-          # Use find command to get relative paths for yq and URL encoding
-          find . -maxdepth 3 -name "*.yaml" -type f ! -path "./.github/*" ! -path "./.worktrees/*/.auto-claude/*" -print0 | while IFS= read -r yaml_file; do
-            # Ensure we only process yaml files directly or within a blueprint folder
-            # Skip files inside .auto-claude/specs within worktrees
-            if [[ "$yaml_file" == *"/.worktrees/"* ]] && [[ "$(basename $(dirname "$yaml_file"))" == "specs" ]]; then
-                continue
-            fi
-            # Skip files inside .github
-            if [[ "$yaml_file" == *"/.github/"* ]]; then
-                continue
-            fi
-
-            # Get directory name and blueprint name (from file system or inside YAML)
-            dir_name=$(dirname "$yaml_file")
-            dir_name_basename=$(basename "$dir_name")
-            blueprint_file_basename=$(basename "$yaml_file")
+          # Find all blueprint yaml files (excluding .github)
+          for dir in */; do
+            dir_name="${dir%/}"
 
             # Skip hidden directories and non-blueprint folders
-            [[ "$dir_name_basename" == .* ]] && continue
+            [[ "$dir_name" == .* ]] && continue
 
-            # Extract the path segment for the repo URL.
-            # This needs to correctly handle blueprints at the root vs inside worktrees.
-            repo_path_for_url=${yaml_file#./} # Remove leading './'
+            # Look for yaml file in the directory
+            yaml_file=$(find "$dir_name" -maxdepth 1 -name "*.yaml" -type f | head -1)
 
-            # Use yq to extract name and description
-            # Use --prettyPrint false to get raw output
-            # Use .blueprint.name and .blueprint.description as common paths, fallback to directory name if needed
-            blueprint_name_raw=$(yq -r '.blueprint.name' "$yaml_file" 2>/dev/null)
-            blueprint_desc_raw=$(yq -r '.blueprint.description' "$yaml_file" 2>/dev/null)
+            if [[ -n "$yaml_file" ]]; then
+              echo "Processing: $yaml_file"
 
-            # Fallback for name if not found or contains unicode escapes
-            if [[ -z "$blueprint_name_raw" ]] || [[ "$blueprint_name_raw" == *"\U"* ]]; then
-              # Try to get a human-readable name from the directory name
-              display_name=$(echo "$dir_name_basename" | sed 's/_/ /g' | sed 's/\b(.)/ሴ/g')
-              emoji="🏠" # Default emoji
-            else
-              display_name="$blueprint_name_raw"
-              # Extract emoji from name or assign based on directory
-              case "$dir_name_basename" in
+              # Extract blueprint name (with emoji)
+              name=$(grep -A1 "^blueprint:" "$yaml_file" | grep "name:" | sed 's/.*name: *"\?\([^"]*\)"\?/\1/' | head -1)
+
+              # If name has unicode escapes, try to get clean name
+              if [[ "$name" == *"\\U"* ]] || [[ -z "$name" ]]; then
+                # Fallback: use directory name with title case
+                name=$(echo "$dir_name" | sed 's/_/ /g' | sed 's/\b\(.\)/\u\1/g')
+              fi
+
+              # Extract description (first line only)
+              description=$(grep -A5 "description:" "$yaml_file" | grep -v "description:" | grep -v "^$" | head -1 | sed 's/^ *//' | sed 's/Features:.*//' | cut -c1-80)
+
+              # Clean up description
+              description=$(echo "$description" | sed 's/^ *- *//' | sed 's/ *$//')
+
+              # Get emoji from name or assign based on directory
+              case "$dir_name" in
                 ai_parking*) emoji="🚗" ;;
                 ai_weather*) emoji="🌤️" ;;
                 doorbell*) emoji="🔔" ;;
-                presence_lights*) emoji="💡" ;; # Added specific worktree case
-                volumecontrol*) emoji="🔈" ;; # Added specific worktree case
-                *) emoji="🏠" ;; # Default emoji
+                presence*) emoji="💡" ;;
+                volume*) emoji="🔈" ;;
+                *) emoji="🏠" ;;
               esac
+
+              # Create import URL
+              yaml_filename=$(basename "$yaml_file")
+              import_url="https://my.home-assistant.io/redirect/blueprint_import/?blueprint_url=https%3A%2F%2Fgithub.com%2Fr3mcos3%2Fblueprints%2Fblob%2Fmain%2F${dir_name}%2F${yaml_filename}"
+
+              # Create display name
+              display_name=$(echo "$dir_name" | sed 's/_/ /g' | sed 's/\b\(.\)/\u\1/g')
+
+              # Add row to table
+              TABLE="$TABLE
+          | $emoji **[$display_name]($dir_name/)** | $description | [![Import](https://my.home-assistant.io/badges/blueprint_import.svg)]($import_url) |"
             fi
-            
-            # Process description
-            version="v?"
-            short_desc=""
-
-            if [[ -n "$blueprint_desc_raw" ]]; then
-              # Try to parse version (vX.Y.Z or vX.Y) and description
-              if [[ "$blueprint_desc_raw" =~ ^v([0-9]+\.[0-9]+(\.[0-9]+)?)\s*-\s*(.*)$ ]]; then
-                version="v${BASH_REMATCH[1]}"
-                short_desc="${BASH_REMATCH[3]}"
-              elif [[ "$blueprint_desc_raw" =~ ^v([0-9]+\.[0-9]+(\.[0-9]+)?)$ ]]; then
-                version="v${BASH_REMATCH[1]}"
-                short_desc="No specific description provided."
-              else
-                # No version found, use the whole string as description if it's not too long
-                short_desc="$blueprint_desc_raw"
-              fi
-            else
-              short_desc="No description found."
-            fi
-
-            # Clean up short description (remove leading/trailing spaces, hyphens, and Features:...)
-            short_desc=$(echo "$short_desc" | sed 's/^ *- *//' | sed 's/ *$//' | sed 's/Features:.*//' | sed 's/^ *//')
-
-            # Truncate short description if it's too long (aiming for ~80 total chars with version)
-            max_total_len=80 # Target total length for "vX.Y.Z - Description"
-            current_version_len=${#version}
-            
-            # Calculate remaining length for description, considering formatting like " - "
-            # Minimum space needed is "vX - ", which is 5 chars if version is short.
-            # If version is "v?", length is 2. If "v1.2.3", length is 7.
-            # We need at least 3 chars for " - " plus the version length.
-            # Let's ensure remaining_len is at least 5 to avoid issues.
-            remaining_len=$((max_total_len - current_version_len - 3)) 
-            if [[ $remaining_len -lt 5 ]]; then # Ensure there's enough space for minimum desc part
-                remaining_len=5
-            fi
-
-            if [[ "$short_desc" != "No description found." && "$short_desc" != "No specific description provided." ]]; then
-              if [[ ${#short_desc} -gt $remaining_len ]]; then
-                short_desc="${short_desc:0:$((remaining_len-3))}..."
-              fi
-            else
-              # Ensure placeholder descriptions are also within limits if they are too long
-              if [[ ${#short_desc} -gt $remaining_len ]]; then
-                short_desc="${short_desc:0:$((remaining_len-3))}..."
-              fi
-            fi
-
-            # Final formatted description for README
-            formatted_description="$version - $short_desc"
-
-            # Generate import URL
-            import_url="https://my.home-assistant.io/redirect/blueprint/?blueprint_url=https://github.com/$GITHUB_REPOSITORY/blob/main/$repo_path_for_url"
-
-            # Add row to table
-            echo "| $emoji **[$display_name]($repo_path_for_url)** | $formatted_description | [![Import](https://my.home-assistant.io/badges/blueprint_import.svg)]($import_url) |" >> /tmp/blueprint_table.md
           done
 
-          # Table generation complete
+          # Save table to file
+          echo "$TABLE" > /tmp/blueprint_table.md
           cat /tmp/blueprint_table.md
 
       - name: Update README
-        shell: python
         run: |
-          import os
+          # Read the current README
+          readme_content=$(cat README.md)
 
-          # Read current README
-          try:
-              with open('README.md', 'r', encoding='utf-8') as f:
-                  readme_lines = f.readlines()
-          except FileNotFoundError:
-              print("README.md not found, creating new one.")
-              readme_lines = []
+          # Read the generated table
+          new_table=$(cat /tmp/blueprint_table.md)
 
-          # Read new table
-          try:
-              with open('/tmp/blueprint_table.md', 'r', encoding='utf-8') as f:
-                  new_table = f.read()
-          except FileNotFoundError:
-              print("Table file not found!")
-              exit(1)
+          # Create new README with updated table
+          # Find the section between "## ✨ Available Blueprints" and the next "##"
+          awk -v table="$new_table" '
+            /^## ✨ Available Blueprints/ {
+              print
+              print ""
+              print "Currently, this repository offers the following blueprints:"
+              print ""
+              print table
+              print ""
+              skip=1
+              next
+            }
+            /^## / && skip {
+              skip=0
+            }
+            !skip {
+              print
+            }
+          ' README.md > README.md.new
 
-          new_content = []
-          in_target_section = False
-          section_header_prefix = "## ✨ Available Blueprints"
-          found_header = False
+          mv README.md.new README.md
 
-          for line in readme_lines:
-              # Check if line starts with the header prefix (ignoring leading/trailing whitespace variations if any)
-              if line.strip().startswith(section_header_prefix):
-                  found_header = True
-                  new_content.append(line) # Keep the header line
-                  new_content.append("\n")
-                  new_content.append("Currently, this repository offers the following blueprints:\n")
-                  new_content.append("\n")
-                  new_content.append(new_table)
-                  new_content.append("\n")
-                  in_target_section = True
-                  continue
-              
-              if in_target_section:
-                  # If we hit the next section (starting with ##), stop skipping
-                  # Ensure we don't match the header we just found if it was repeated for some reason
-                  if line.strip().startswith("## ") and not line.strip().startswith(section_header_prefix):
-                      in_target_section = False
-                      new_content.append(line)
-                  # Otherwise, we are in the section to replace, so we skip the old content
-              else:
-                  new_content.append(line)
-
-          # Fallback if header not found
-          if not found_header:
-              print("Header not found, appending...")
-              new_content.append("\n" + section_header_prefix + "\n")
-              new_content.append("\nCurrently, this repository offers the following blueprints:\n\n")
-              new_content.append(new_table)
-              new_content.append("\n")
-
-          with open('README.md', 'w', encoding='utf-8') as f:
-              f.writelines(new_content)
-          
-          print("README.md updated successfully.")
+          echo "Updated README.md:"
+          cat README.md
 
       - name: Check for changes
         id: check
         run: |
-          # Check if README.md has been modified
           if git diff --quiet README.md; then
             echo "changed=false" >> $GITHUB_OUTPUT
           else
@@ -213,14 +126,10 @@ jobs:
           fi
 
       - name: Commit and push
-        # Only run if changes were detected by the previous step
         if: steps.check.outputs.changed == 'true'
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add README.md
-          # Commit message should be in English and prefixed with an emoji
-          COMMIT_MESSAGE="🤖 Auto-update README with blueprint list and versioned descriptions"
-          git commit -m "$COMMIT_MESSAGE"
-          echo "Pushing changes..."
+          git commit -m "🤖 Auto-update README with blueprint list"
           git push
